--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gatsby-source-filesystem": "^2.0.22",
     "gatsby-transformer-json": "^2.1.8",
     "gatsby-transformer-sharp": "^2.1.14",
+    "i": "^0.3.6",
+    "npm": "^6.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -23,7 +25,8 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "react-social-icons": "^4.1.0"
   },
   "keywords": [
     "gatsby"
